--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.mvc.view.suffix=.jsp
 server.servlet.context-path=/flightcheckin
 
 server.port=9090
+
+com.young.flightcheckin.reservationurl = http://localhost:8080/flightreservation/reservations/
